# MultIHeaTS

./: .gitignore  .gitlab-ci.yml  README.md  environment.yml  pyproject.toml  setup.py
data/: Blackburn_Albedo_Iapetus.txt  Blackburn_Albedo_Iapetus.xls
docs/: conf.py  index.rst
ephemerides/: README.md
examples/: README.md  example_1.py  example_SPICE.py  run_example.sh
figures/animations/: constants.py  main.py  plot_temp_evo.ipynb  solar_flux.py  solvers.py  visualise.py
figures/convergence/: conductionCrankQ.py  depth.npy  plot_errors.py  run_conv.py  test_conv.py
figures/convergence/repro/: old_conv_schor.py
figures/eclipse/: conductionCrankQ.py  eclipse.py  plot_errors.py  visu.py
latex/HeatPaper2023/: SupMat.tex  library.bib  manuscript.tex  sn-jnl.cls
latex/paper_2023/: MERGNY_message_editor.doc  SupMat.tex  interact.cls  library.bib  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
latex/sn-article-template/: sn-article.aux  sn-article.blg  sn-article.fdb_latexmk  sn-article.fls
multiheats.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: TdeepSpencer.csv  europa_albedo.py  tdeep_wpd_project.json
src/multiheats/: __init__.py  constants.py  create_fluxs.py  create_profiles.py  main.py  main.py.lprof  old_solvers.py  query_spice.py  solar_flux.py  solvers.py  test.py  thermprops.py  visualise.py
src/multiheats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/multiheats/profiling/: 1opti_nx600.txt  25orbit.txt  2opti_nx600.txt  (+31 more)
tests/: '  ]  test_solv_ana.py  test_solv_spencer.py  test_solvers.py  visu_ana.py
