[project]
name = "multiheats"
version = "1.2"
description = "MultIHeaTS is a Multi-layered Implicit Heat Transfer Solver."

[tool.poetry]
name = "multiheats"
version = "1.2"
description = "MultIHeaTS is a Multi-layered Implicit Heat Transfer Solver."
authors = ["Cyril Mergny <cyril.mergny@universite-paris-saclay.fr>"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">3.9"
numpy = "*"
matplotlib = "*"
scipy = "*"
pandas = "*"
tqdm = "*"
xlrd = "*"
astropy = "*"
astroquery = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ipython = "*"
jupyter = "*"
line_profiler = "*"

